--- a/trunk/res/values/usbongStyle.xml
+++ b/trunk/res/values/usbongStyle.xml
@@ -31,7 +31,7 @@
         <item name="android:background">@drawable/title</item>
         <item name="android:orientation">vertical</item>  
         <item name="android:gravity">center</item>    
-        <item name="android:paddingTop">20px</item>			          
+        <item name="android:paddingTop">20dp</item>			          
     </style>	   
 
 	<style name="UsbongMainMenuParentLayout">
@@ -111,7 +111,7 @@
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:layout_weight">0.9</item>
         <item name="android:orientation">vertical</item>   
-        <item name="android:paddingTop">16px</item>                
+        <item name="android:paddingTop">16dp</item>                
     </style>	   
 
 	<style name="UsbongTextImageMainLayout">
@@ -120,7 +120,7 @@
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:layout_weight">0.9</item>
         <item name="android:orientation">vertical</item>   
-        <item name="android:paddingTop">16px</item>                
+        <item name="android:paddingTop">16dp</item>                
     </style>	   
 	
     <style name="UsbongSpecialImageMainLayout">
@@ -146,7 +146,7 @@
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:layout_weight">0.9</item>
         <item name="android:orientation">horizontal</item>   
-        <item name="android:paddingTop">4px</item>                
+        <item name="android:paddingTop">4dp</item>                
     </style>	           
 
 	<style name="UsbongMultipleRadioButtonsMainLayout">
@@ -155,7 +155,7 @@
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:layout_weight">0.9</item>
         <item name="android:orientation">vertical</item>   
-        <item name="android:paddingTop">4px</item>                
+        <item name="android:paddingTop">4dp</item>                
     </style>	   
 
 	<style name="UsbongMultipleCheckBoxesMainLayout">
@@ -164,7 +164,7 @@
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:layout_weight">0.9</item>
         <item name="android:orientation">vertical</item>   
-        <item name="android:paddingTop">4px</item>                
+        <item name="android:paddingTop">4dp</item>                
     </style>	   
     
 	<style name="UsbongDefaultTextView">
@@ -179,7 +179,7 @@
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#4a452a</item>
-        <item name="android:textSize">24px</item>
+        <item name="android:textSize">24dp</item>
         <item name="android:gravity">left</item>
 		<item name="android:layout_weight">8</item>        
     </style>	   
@@ -188,7 +188,7 @@
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">24px</item>
+        <item name="android:textSize">24dp</item>
         <item name="android:gravity">left</item>
 		<item name="android:layout_weight">8</item>        
     </style>	   
@@ -197,7 +197,7 @@
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">18px</item>
+        <item name="android:textSize">18dp</item>
         <item name="android:gravity">left</item>
     </style>	   
 
@@ -207,7 +207,7 @@
         <item name="android:gravity">right</item>
     </style>	   
 
-		<style name="UsbongDefaultImageView">
+	<style name="UsbongDefaultImageView">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
     </style>	   
@@ -229,16 +229,16 @@
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:paddingTop">20px</item>        
+        <item name="android:paddingTop">20dp</item>        
         <item name="android:textColor">#4a452a</item>
-        <item name="android:textSize">30px</item>
+        <item name="android:textSize">30dp</item>
     </style>	   
     
     <style name="UsbongDefaultEditText">
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
-        <item name="android:textSize">30px</item>
+        <item name="android:textSize">30dp</item>
     </style>	       
     
     <style name="UsbongTextAreaEditText">
@@ -263,7 +263,7 @@
 		<item name="android:layout_width">136dp</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">#4a452a</item>
-		<item name="android:textSize">20px</item>		
+		<item name="android:textSize">20dp</item>		
 		<item name="android:background">@drawable/button</item>
     </style>	   
 
@@ -271,7 +271,7 @@
 		<item name="android:layout_width">136dp</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">#4a452a</item>
-		<item name="android:textSize">20px</item>		
+		<item name="android:textSize">20dp</item>		
 		<item name="android:layout_gravity">center</item>
 		<item name="android:background">@drawable/button</item>		
     </style>	   
@@ -284,7 +284,7 @@
     <style name="UsbongDefaultSelectCancelButton">
 		<item name="android:layout_width">136dp</item>
 		<item name="android:layout_height">wrap_content</item>
-		<item name="android:textSize">20px</item>		
+		<item name="android:textSize">20dp</item>		
 		<item name="android:layout_gravity">center</item>
 	</style>	       
     
@@ -292,7 +292,7 @@
 		<item name="android:layout_width">300dp</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">#4a452a</item>
-		<item name="android:textSize">20px</item>		
+		<item name="android:textSize">20dp</item>		
 		<item name="android:layout_gravity">center</item>
 		<item name="android:background">@drawable/button</item>	
 		<item name="android:layout_marginBottom">5dp</item>	
@@ -308,40 +308,40 @@
 		<item name="android:layout_width">300dp</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">#4a452a</item>
-		<item name="android:textSize">20px</item>		
+		<item name="android:textSize">20dp</item>		
 		<item name="android:layout_gravity">center</item>
 		<item name="android:background">@drawable/button_yellow</item>	
 		<item name="android:layout_marginBottom">5dp</item>		
 	</style>	               
     
     <style name="UsbongAudioPlayerButton">
-		<item name="android:layout_width">200px</item>
+		<item name="android:layout_width">200dp</item>
 		<item name="android:layout_height">wrap_content</item>
     </style>	                   
     
     <style name="UsbongYesNoRadioButton">
-    	<item name="android:textSize">24px</item>
+    	<item name="android:textSize">24dp</item>
     </style>	                   
 
     <style name="UsbongSettingsCheckBox">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>		
-    	<item name="android:textSize">20px</item>
+    	<item name="android:textSize">20dp</item>
     	<item name="android:checked">false</item>
     	<item name="android:ellipsize">marquee</item>
     	<item name="android:layout_gravity">right</item>
     	<item name="android:layout_weight">1</item>
-		<item name="android:paddingRight">5px</item>    	
+		<item name="android:paddingRight">5dp</item>    	
     </style>	                       
 
     <style name="UsbongMultipleRadioButtons">
-    	<item name="android:textSize">20px</item>
+    	<item name="android:textSize">20dp</item>
     </style>	                       
 
     <style name="UsbongMultipleCheckBoxes">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>		
-    	<item name="android:textSize">20px</item>
+    	<item name="android:textSize">20dp</item>
     	<item name="android:checked">false</item>
     	<item name="android:ellipsize">marquee</item>
     </style>	                       
@@ -350,7 +350,7 @@
 		<item name="android:layout_width">300dp</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textColor">#4a452a</item>
-		<item name="android:textSize">20px</item>		
+		<item name="android:textSize">20dp</item>		
 		<item name="android:layout_gravity">center</item>
 		<item name="android:background">@drawable/button_yellow</item>	
 		<item name="android:layout_marginBottom">5dp</item>	
