--- a/trunk/res/layout/end_state_screen.xml
+++ b/trunk/res/layout/end_state_screen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	style="@style/UsbongDefaultParentLayout"
+	style="@style/UsbongEndStateParentLayout"
 	android:id="@+id/parent_layout_id"       
 	>	
 		<TextView android:id="@+id/end_state_textview"
@@ -12,10 +12,10 @@
 			style="@style/UsbongDefaultBackNextButtonLayout">	
 	    	<Button android:id="@+id/back_button"
 		    	style="@style/UsbongDefaultBackNextButton"
-		    	android:text="Back"/>
+		    	android:text="@string/back"/>
 		    
 	   		<Button android:id="@+id/next_button"
 		    	style="@style/UsbongDefaultBackNextButton"
-		    	android:text="Next"/>	    
+		    	android:text="@string/next"/>	    
 		</LinearLayout>
 </LinearLayout>
